fix: change alignment in copyright

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -362,7 +362,6 @@ body {
 .info-block3__caption {
     font-size: 18px;
     color: rgb(241, 196, 15);
-    text-align: left;
     line-height: 60px;
     text-transform: uppercase;
     font-weight: bold;
@@ -372,12 +371,14 @@ body {
     text-align: center;
     background-color: rgb(242, 242, 242);
     cursor: pointer;
+    letter-spacing: 0.04em;
 }
 .info-block3__caption__icon {
+    position: relative;
     width: 14px;
-    margin-right: 14px;
-    margin-top: 2px;
-    margin-left: -15px;
+    right: 18px;
+    top: 2px;
+    
 }
 .info-block3__caption:hover {
     box-shadow: 0px -1px 4px 0px rgba(241, 196, 15, 0.56);
